--- a/informe/Informe.tex
+++ b/informe/Informe.tex
@@ -280,8 +280,10 @@ significativo se decidió dejar este \cite{svmSklearn}.
 
 \subsubsection{Entrenamiento}
 
-Para el entrenamiento final obtuvo una precisión del 57\% por lo que nos indica que la separación no es buena con
-los atributos propuestos. Puede ser que al encontrar un conjunto de atributos que separe correctamente los documentos
+Para el entrenamiento final obtuvo una precisión del 53\% aproximadamente por lo que nos indica que la separación no es buena con
+los atributos propuestos. Diferentes corridas del algoritmo dieron lugar a cambios drásticos en las métricas del modelo, esto lleva
+a pensar que los atributos elegidos no separan correctamente el conjunto de datos, lo que es corroborado por la precisión obtenida en 
+el entrenamiento. Puede ser que al encontrar un conjunto de atributos que separe correctamente los documentos
 se logre mejorar el rendimiento del modelo.
 
 \subsection{Retroalimentación}
